# class-roster

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml
frontend/: index.html
frontend/css/: app.css
frontend/javascript/: app.js  language.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: roster_template.xlsx
src-tauri/src/: lib.rs  main.rs
