[package]
name = "class-roster"
version = "2.0.1"
description = "A bilingual desktop application that stores class-roster entries in a local Excel workbook."
authors = ["Ryan Wynn"]
license = "MIT"
edition = "2024"
rust-version = "1.85.0"

[lib]
name = "class_roster_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.3", features = [] }
umya-spreadsheet = "3.0.1"
